fix(cards): fix truncation and overflow
fixes the truncation and overflow issues when viewing on different resolutions

--- a/src/app/dashboard-widgets/add-codebase-widget/add-codebase-widget.component.scss
+++ b/src/app/dashboard-widgets/add-codebase-widget/add-codebase-widget.component.scss
@@ -9,8 +9,14 @@
   position: absolute;
   left: 50px;
   width: 475px;
-  @media (max-width: 1281px) {
+  @media (min-width: 1440px) and (max-width: 1920px) {
     width: 83%;
+  }
+  @media (min-width: 1280px) and (max-width: 1440px) {
+    width: 83%;
+  }
+  @media (min-width: 1024px) and (max-width: 1280px) {
+    width: 82%;
   }
   white-space: nowrap;
   overflow: hidden;
